--- a/frontend/src/app/products/product-editor/product-editor.component.css
+++ b/frontend/src/app/products/product-editor/product-editor.component.css
@@ -30,7 +30,7 @@ body {
 
 
 h2 {
-    color: #0A192F;
+    color: #012f5a;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -50,7 +50,7 @@ h2 {
 }
 
 button[type="submit"] {
-    background-color: #0A192F;
+    background-color: #012f5a;
     color: #F8F8F8;
     border: none;
     padding: 10px 20px;
