--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -14,7 +14,7 @@
       <div class="dropdown">
         <a class="button">More</a>
         <div class="dropdown-content">
-          <a [routerLink]="'/join'">Join</a>
+          <a [routerLink]="'/admin'">Join</a>
           <!-- Add more links here as needed -->
         </div>
       </div>
